Small analysis re-runs for draft update.

--- a/one_off/matrisome_stats.ipynb
+++ b/one_off/matrisome_stats.ipynb
@@ -3,21 +3,21 @@
   {
    "cell_type": "code",
    "execution_count": 1,
-   "id": "powerful-visitor",
+   "id": "intermediate-refund",
    "metadata": {},
    "outputs": [
     {
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "-- \u001b[1mAttaching packages\u001b[22m -------------------------------------------------------------------------------------------------------------- tidyverse 1.3.0 --\n",
+      "-- \u001b[1mAttaching packages\u001b[22m ------------------------------------------------------------------------------------------------------- tidyverse 1.3.0 --\n",
       "\n",
       "\u001b[32mv\u001b[39m \u001b[34mggplot2\u001b[39m 3.3.3     \u001b[32mv\u001b[39m \u001b[34mpurrr  \u001b[39m 0.3.4\n",
       "\u001b[32mv\u001b[39m \u001b[34mtibble \u001b[39m 3.0.6     \u001b[32mv\u001b[39m \u001b[34mdplyr  \u001b[39m 1.0.4\n",
       "\u001b[32mv\u001b[39m \u001b[34mtidyr  \u001b[39m 1.1.2     \u001b[32mv\u001b[39m \u001b[34mstringr\u001b[39m 1.4.0\n",
       "\u001b[32mv\u001b[39m \u001b[34mreadr  \u001b[39m 1.4.0     \u001b[32mv\u001b[39m \u001b[34mforcats\u001b[39m 0.5.1\n",
       "\n",
-      "-- \u001b[1mConflicts\u001b[22m ----------------------------------------------------------------------------------------------------------------- tidyverse_conflicts() --\n",
+      "-- \u001b[1mConflicts\u001b[22m ---------------------------------------------------------------------------------------------------------- tidyverse_conflicts() --\n",
       "\u001b[31mx\u001b[39m \u001b[34mdplyr\u001b[39m::\u001b[32mfilter()\u001b[39m masks \u001b[34mstats\u001b[39m::filter()\n",
       "\u001b[31mx\u001b[39m \u001b[34mdplyr\u001b[39m::\u001b[32mlag()\u001b[39m    masks \u001b[34mstats\u001b[39m::lag()\n",
       "\n"
@@ -34,7 +34,7 @@
   {
    "cell_type": "code",
    "execution_count": 2,
-   "id": "external-county",
+   "id": "trained-census",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -45,8 +45,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
-   "id": "biblical-hughes",
+   "execution_count": 3,
+   "id": "digital-kuwait",
    "metadata": {},
    "outputs": [
     {
@@ -54,7 +54,7 @@
      "output_type": "stream",
      "text": [
       "\n",
-      "\u001b[36m--\u001b[39m \u001b[1m\u001b[1mColumn specification\u001b[1m\u001b[22m \u001b[36m-------------------------------------------------------------------------------------------------------------------------------\u001b[39m\n",
+      "\u001b[36m--\u001b[39m \u001b[1m\u001b[1mColumn specification\u001b[1m\u001b[22m \u001b[36m------------------------------------------------------------------------------------------------------------------------\u001b[39m\n",
       "cols(\n",
       "  .default = col_double(),\n",
       "  ensembl_gene_id = \u001b[31mcol_character()\u001b[39m,\n",
@@ -74,47 +74,15 @@
   {
    "cell_type": "code",
    "execution_count": 4,
-   "id": "professional-bloom",
-   "metadata": {
-    "collapsed": true,
-    "jupyter": {
-     "outputs_hidden": true
-    }
-   },
+   "id": "steady-venice",
+   "metadata": {},
    "outputs": [
     {
      "name": "stderr",
      "output_type": "stream",
      "text": [
       "\n",
-      "\u001b[36m--\u001b[39m \u001b[1m\u001b[1mColumn specification\u001b[1m\u001b[22m \u001b[36m-------------------------------------------------------------------------------------------------------------------------------\u001b[39m\n",
-      "cols(\n",
-      "  .default = col_double(),\n",
-      "  Hugo_Symbol = \u001b[31mcol_character()\u001b[39m\n",
-      ")\n",
-      "\u001b[36mi\u001b[39m Use \u001b[30m\u001b[47m\u001b[30m\u001b[47m`spec()`\u001b[47m\u001b[30m\u001b[49m\u001b[39m for the full column specifications.\n",
-      "\n",
-      "\n",
-      "\n",
-      "\u001b[36m--\u001b[39m \u001b[1m\u001b[1mColumn specification\u001b[1m\u001b[22m \u001b[36m-------------------------------------------------------------------------------------------------------------------------------\u001b[39m\n",
-      "cols(\n",
-      "  .default = col_double(),\n",
-      "  Hugo_Symbol = \u001b[31mcol_character()\u001b[39m\n",
-      ")\n",
-      "\u001b[36mi\u001b[39m Use \u001b[30m\u001b[47m\u001b[30m\u001b[47m`spec()`\u001b[47m\u001b[30m\u001b[49m\u001b[39m for the full column specifications.\n",
-      "\n",
-      "\n",
-      "\n",
-      "\u001b[36m--\u001b[39m \u001b[1m\u001b[1mColumn specification\u001b[1m\u001b[22m \u001b[36m-------------------------------------------------------------------------------------------------------------------------------\u001b[39m\n",
-      "cols(\n",
-      "  .default = col_double(),\n",
-      "  Hugo_Symbol = \u001b[31mcol_character()\u001b[39m\n",
-      ")\n",
-      "\u001b[36mi\u001b[39m Use \u001b[30m\u001b[47m\u001b[30m\u001b[47m`spec()`\u001b[47m\u001b[30m\u001b[49m\u001b[39m for the full column specifications.\n",
-      "\n",
-      "\n",
-      "\n",
-      "\u001b[36m--\u001b[39m \u001b[1m\u001b[1mColumn specification\u001b[1m\u001b[22m \u001b[36m-------------------------------------------------------------------------------------------------------------------------------\u001b[39m\n",
+      "\u001b[36m--\u001b[39m \u001b[1m\u001b[1mColumn specification\u001b[1m\u001b[22m \u001b[36m------------------------------------------------------------------------------------------------------------------------\u001b[39m\n",
       "cols(\n",
       "  .default = col_double(),\n",
       "  geneID = \u001b[31mcol_character()\u001b[39m\n",
@@ -123,7 +91,7 @@
       "\n",
       "\n",
       "\n",
-      "\u001b[36m--\u001b[39m \u001b[1m\u001b[1mColumn specification\u001b[1m\u001b[22m \u001b[36m-------------------------------------------------------------------------------------------------------------------------------\u001b[39m\n",
+      "\u001b[36m--\u001b[39m \u001b[1m\u001b[1mColumn specification\u001b[1m\u001b[22m \u001b[36m------------------------------------------------------------------------------------------------------------------------\u001b[39m\n",
       "cols(\n",
       "  .default = col_double(),\n",
       "  geneID = \u001b[31mcol_character()\u001b[39m\n",
@@ -132,7 +100,7 @@
       "\n",
       "\n",
       "\n",
-      "\u001b[36m--\u001b[39m \u001b[1m\u001b[1mColumn specification\u001b[1m\u001b[22m \u001b[36m-------------------------------------------------------------------------------------------------------------------------------\u001b[39m\n",
+      "\u001b[36m--\u001b[39m \u001b[1m\u001b[1mColumn specification\u001b[1m\u001b[22m \u001b[36m------------------------------------------------------------------------------------------------------------------------\u001b[39m\n",
       "cols(\n",
       "  .default = col_double(),\n",
       "  geneID = \u001b[31mcol_character()\u001b[39m\n",
@@ -141,7 +109,7 @@
       "\n",
       "\n",
       "\n",
-      "\u001b[36m--\u001b[39m \u001b[1m\u001b[1mColumn specification\u001b[1m\u001b[22m \u001b[36m-------------------------------------------------------------------------------------------------------------------------------\u001b[39m\n",
+      "\u001b[36m--\u001b[39m \u001b[1m\u001b[1mColumn specification\u001b[1m\u001b[22m \u001b[36m------------------------------------------------------------------------------------------------------------------------\u001b[39m\n",
       "cols(\n",
       "  Division = \u001b[31mcol_character()\u001b[39m,\n",
       "  Category = \u001b[31mcol_character()\u001b[39m,\n",
@@ -173,81 +141,9 @@
   {
    "cell_type": "code",
    "execution_count": 5,
-   "id": "private-segment",
+   "id": "thick-magazine",
    "metadata": {},
    "outputs": [
-    {
-     "data": {
-      "text/html": [
-       "20242"
-      ],
-      "text/latex": [
-       "20242"
-      ],
-      "text/markdown": [
-       "20242"
-      ],
-      "text/plain": [
-       "[1] 20242"
-      ]
-     },
-     "metadata": {},
-     "output_type": "display_data"
-    },
-    {
-     "data": {
-      "text/html": [
-       "20242"
-      ],
-      "text/latex": [
-       "20242"
-      ],
-      "text/markdown": [
-       "20242"
-      ],
-      "text/plain": [
-       "[1] 20242"
-      ]
-     },
-     "metadata": {},
-     "output_type": "display_data"
-    },
-    {
-     "data": {
-      "text/html": [
-       "20242"
-      ],
-      "text/latex": [
-       "20242"
-      ],
-      "text/markdown": [
-       "20242"
-      ],
-      "text/plain": [
-       "[1] 20242"
-      ]
-     },
-     "metadata": {},
-     "output_type": "display_data"
-    },
-    {
-     "data": {
-      "text/html": [
-       "20242"
-      ],
-      "text/latex": [
-       "20242"
-      ],
-      "text/markdown": [
-       "20242"
-      ],
-      "text/plain": [
-       "[1] 20242"
-      ]
-     },
-     "metadata": {},
-     "output_type": "display_data"
-    },
     {
      "data": {
       "text/html": [
@@ -331,8 +227,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
-   "id": "thick-duration",
+   "execution_count": 9,
+   "id": "caroline-flood",
    "metadata": {},
    "outputs": [
     {
@@ -514,11 +410,11 @@
    ],
    "source": [
     "nrow(matrisome_df)\n",
-    "nrow(matrisome_df %>% filter(!(gene_symbol %in% ds_genes)))\n",
+    "nrow(matrisome_df %>% filter(!(gene_symbol %in% ds_m_genes)))\n",
     "nrow(matrisome_df %>% filter(!(gene_symbol %in% tcga_pan_genes)))\n",
     "\n",
     "filt_matrisome_df <- matrisome_df %>%\n",
-    "    filter(gene_symbol %in% ds_genes)\n",
+    "    filter(gene_symbol %in% ds_m_genes)\n",
     "nrow(filt_matrisome_df)\n",
     "\n",
     "matrisome_df %>%\n",
@@ -533,7 +429,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "incident-louisiana",
+   "id": "hundred-lambda",
    "metadata": {},
    "outputs": [],
    "source": []
