Some more information included in main meta analysis script.

--- a/meta_analysis/gene_lists_and_meta.ipynb
+++ b/meta_analysis/gene_lists_and_meta.ipynb
@@ -3,7 +3,7 @@
   {
    "cell_type": "code",
    "execution_count": 1,
-   "id": "hindu-express",
+   "id": "private-vision",
    "metadata": {},
    "outputs": [
     {
@@ -34,7 +34,7 @@
   {
    "cell_type": "code",
    "execution_count": 2,
-   "id": "regulation-walker",
+   "id": "confidential-phenomenon",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -47,7 +47,7 @@
   {
    "cell_type": "code",
    "execution_count": 3,
-   "id": "mounted-lover",
+   "id": "minor-spokesman",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -58,7 +58,7 @@
   {
    "cell_type": "code",
    "execution_count": 4,
-   "id": "formal-warrant",
+   "id": "molecular-accent",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -76,7 +76,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "flying-switch",
+   "id": "cordless-template",
    "metadata": {},
    "source": [
     "# Functions"
@@ -85,7 +85,7 @@
   {
    "cell_type": "code",
    "execution_count": 5,
-   "id": "japanese-portugal",
+   "id": "healthy-switch",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -99,7 +99,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "motivated-hollywood",
+   "id": "critical-logan",
    "metadata": {},
    "source": [
     "# Data"
@@ -108,7 +108,7 @@
   {
    "cell_type": "code",
    "execution_count": 6,
-   "id": "circular-lodge",
+   "id": "cardiovascular-saver",
    "metadata": {},
    "outputs": [
     {
@@ -267,7 +267,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "minor-directive",
+   "id": "artistic-equity",
    "metadata": {},
    "source": [
     "# DGE analysis"
@@ -275,7 +275,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "broad-title",
+   "id": "certified-dover",
    "metadata": {},
    "source": [
     "## DEG"
@@ -284,7 +284,7 @@
   {
    "cell_type": "code",
    "execution_count": 7,
-   "id": "chicken-valentine",
+   "id": "accurate-topic",
    "metadata": {},
    "outputs": [
     {
@@ -346,7 +346,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "rotary-delhi",
+   "id": "brilliant-andrew",
    "metadata": {},
    "source": [
     "## DEMG"
@@ -355,7 +355,7 @@
   {
    "cell_type": "code",
    "execution_count": 8,
-   "id": "baking-pharmaceutical",
+   "id": "headed-closing",
    "metadata": {},
    "outputs": [
     {
@@ -419,7 +419,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "subject-typing",
+   "id": "extended-meaning",
    "metadata": {},
    "source": [
     "# Uni/multivariate analysis"
@@ -427,7 +427,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "later-compact",
+   "id": "trained-generation",
    "metadata": {},
    "source": [
     "## Welch ANOVA"
@@ -436,7 +436,7 @@
   {
    "cell_type": "code",
    "execution_count": 9,
-   "id": "flexible-somewhere",
+   "id": "seeing-assault",
    "metadata": {},
    "outputs": [
     {
@@ -466,7 +466,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "heard-victor",
+   "id": "powerful-nursing",
    "metadata": {},
    "source": [
     "## MI"
@@ -475,7 +475,7 @@
   {
    "cell_type": "code",
    "execution_count": 10,
-   "id": "considered-hughes",
+   "id": "initial-calvin",
    "metadata": {},
    "outputs": [
     {
@@ -505,7 +505,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "recorded-accuracy",
+   "id": "naked-oregon",
    "metadata": {},
    "source": [
     "# ML baselines"
@@ -514,7 +514,7 @@
   {
    "cell_type": "code",
    "execution_count": 11,
-   "id": "prerequisite-thanksgiving",
+   "id": "amber-charter",
    "metadata": {},
    "outputs": [
     {
@@ -579,7 +579,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "rocky-creator",
+   "id": "dominant-corrections",
    "metadata": {},
    "source": [
     "# LR (L1)"
@@ -588,7 +588,7 @@
   {
    "cell_type": "code",
    "execution_count": 12,
-   "id": "entire-community",
+   "id": "organized-tourism",
    "metadata": {},
    "outputs": [
     {
@@ -650,7 +650,82 @@
   },
   {
    "cell_type": "markdown",
-   "id": "boxed-coverage",
+   "id": "spare-intervention",
+   "metadata": {},
+   "source": [
+    "## How do uni/multivariate analyses overlap?"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 22,
+   "id": "threatened-thriller",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "0"
+      ],
+      "text/latex": [
+       "0"
+      ],
+      "text/markdown": [
+       "0"
+      ],
+      "text/plain": [
+       "[1] 0"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    },
+    {
+     "data": {
+      "text/html": [
+       "3"
+      ],
+      "text/latex": [
+       "3"
+      ],
+      "text/markdown": [
+       "3"
+      ],
+      "text/plain": [
+       "[1] 3"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    },
+    {
+     "data": {
+      "text/html": [
+       "2"
+      ],
+      "text/latex": [
+       "2"
+      ],
+      "text/markdown": [
+       "2"
+      ],
+      "text/plain": [
+       "[1] 2"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    }
+   ],
+   "source": [
+    "length(intersect(mi_meta_ls$genes, lr_l1_meta_ls$genes))\n",
+    "length(intersect(anova_meta_ls$genes, lr_l1_meta_ls$genes))\n",
+    "length(intersect(anova_meta_ls$genes, mi_meta_ls$genes))"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "described-capitol",
    "metadata": {},
    "source": [
     "# WGCNA"
@@ -658,8 +733,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
-   "id": "checked-visiting",
+   "execution_count": 14,
+   "id": "maritime-elephant",
    "metadata": {},
    "outputs": [
     {
@@ -679,8 +754,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
-   "id": "contrary-preliminary",
+   "execution_count": 15,
+   "id": "czech-length",
    "metadata": {},
    "outputs": [
     {
@@ -726,7 +801,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "unique-fever",
+   "id": "adequate-librarian",
    "metadata": {},
    "source": [
     "## TOM meta"
@@ -734,8 +809,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
-   "id": "respective-devon",
+   "execution_count": 16,
+   "id": "corrected-dubai",
    "metadata": {},
    "outputs": [
     {
@@ -785,7 +860,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "consecutive-brazilian",
+   "id": "proper-privacy",
    "metadata": {},
    "source": [
     "# Create Lists"
@@ -793,8 +868,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
-   "id": "danish-network",
+   "execution_count": 17,
+   "id": "formed-sword",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -813,8 +888,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
-   "id": "afraid-brain",
+   "execution_count": 18,
+   "id": "finite-reader",
    "metadata": {},
    "outputs": [
     {
@@ -956,7 +1031,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "attached-banana",
+   "id": "sublime-allergy",
    "metadata": {},
    "source": [
     "# Save lists"
@@ -964,8 +1039,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
-   "id": "viral-fortune",
+   "execution_count": 19,
+   "id": "biblical-singapore",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -983,7 +1058,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "going-spirit",
+   "id": "institutional-mitchell",
    "metadata": {},
    "outputs": [],
    "source": []
