Experimented with using 10-fold cross-validation for FIGO L1 logistic regression.

--- a/meta_analysis/gene_lists_and_meta.ipynb
+++ b/meta_analysis/gene_lists_and_meta.ipynb
@@ -3,7 +3,7 @@
   {
    "cell_type": "code",
    "execution_count": 1,
-   "id": "private-vision",
+   "id": "violent-belize",
    "metadata": {},
    "outputs": [
     {
@@ -34,7 +34,7 @@
   {
    "cell_type": "code",
    "execution_count": 2,
-   "id": "confidential-phenomenon",
+   "id": "instrumental-neighborhood",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -47,7 +47,7 @@
   {
    "cell_type": "code",
    "execution_count": 3,
-   "id": "minor-spokesman",
+   "id": "independent-government",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -58,7 +58,7 @@
   {
    "cell_type": "code",
    "execution_count": 4,
-   "id": "molecular-accent",
+   "id": "republican-stream",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -76,7 +76,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "cordless-template",
+   "id": "applicable-assembly",
    "metadata": {},
    "source": [
     "# Functions"
@@ -85,7 +85,7 @@
   {
    "cell_type": "code",
    "execution_count": 5,
-   "id": "healthy-switch",
+   "id": "composed-legend",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -99,7 +99,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "critical-logan",
+   "id": "contained-discussion",
    "metadata": {},
    "source": [
     "# Data"
@@ -108,7 +108,7 @@
   {
    "cell_type": "code",
    "execution_count": 6,
-   "id": "cardiovascular-saver",
+   "id": "beautiful-seeker",
    "metadata": {},
    "outputs": [
     {
@@ -267,7 +267,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "artistic-equity",
+   "id": "lesser-avenue",
    "metadata": {},
    "source": [
     "# DGE analysis"
@@ -275,7 +275,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "certified-dover",
+   "id": "alert-brand",
    "metadata": {},
    "source": [
     "## DEG"
@@ -284,7 +284,7 @@
   {
    "cell_type": "code",
    "execution_count": 7,
-   "id": "accurate-topic",
+   "id": "hollywood-playing",
    "metadata": {},
    "outputs": [
     {
@@ -346,7 +346,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "brilliant-andrew",
+   "id": "sophisticated-nerve",
    "metadata": {},
    "source": [
     "## DEMG"
@@ -355,7 +355,7 @@
   {
    "cell_type": "code",
    "execution_count": 8,
-   "id": "headed-closing",
+   "id": "nearby-invention",
    "metadata": {},
    "outputs": [
     {
@@ -419,7 +419,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "extended-meaning",
+   "id": "legitimate-launch",
    "metadata": {},
    "source": [
     "# Uni/multivariate analysis"
@@ -427,7 +427,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "trained-generation",
+   "id": "inside-equation",
    "metadata": {},
    "source": [
     "## Welch ANOVA"
@@ -436,7 +436,7 @@
   {
    "cell_type": "code",
    "execution_count": 9,
-   "id": "seeing-assault",
+   "id": "worth-farming",
    "metadata": {},
    "outputs": [
     {
@@ -466,7 +466,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "powerful-nursing",
+   "id": "emerging-delhi",
    "metadata": {},
    "source": [
     "## MI"
@@ -475,7 +475,7 @@
   {
    "cell_type": "code",
    "execution_count": 10,
-   "id": "initial-calvin",
+   "id": "killing-history",
    "metadata": {},
    "outputs": [
     {
@@ -505,7 +505,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "naked-oregon",
+   "id": "graduate-samoa",
    "metadata": {},
    "source": [
     "# ML baselines"
@@ -514,7 +514,7 @@
   {
    "cell_type": "code",
    "execution_count": 11,
-   "id": "amber-charter",
+   "id": "systematic-concord",
    "metadata": {},
    "outputs": [
     {
@@ -579,7 +579,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "dominant-corrections",
+   "id": "green-eleven",
    "metadata": {},
    "source": [
     "# LR (L1)"
@@ -588,7 +588,7 @@
   {
    "cell_type": "code",
    "execution_count": 12,
-   "id": "organized-tourism",
+   "id": "furnished-domain",
    "metadata": {},
    "outputs": [
     {
@@ -596,47 +596,47 @@
       "text/html": [
        "<dl>\n",
        "\t<dt>$avg_score</dt>\n",
-       "\t\t<dd>0.304563492063492</dd>\n",
+       "\t\t<dd>0.3845</dd>\n",
        "\t<dt>$naive_pct_imp</dt>\n",
-       "\t\t<dd>116.57848324515</dd>\n",
+       "\t\t<dd>173.422222222222</dd>\n",
        "\t<dt>$mc_pct_imp</dt>\n",
-       "\t\t<dd>23.8020653258485</dd>\n",
+       "\t\t<dd>56.2954699372348</dd>\n",
        "\t<dt>$n_genes</dt>\n",
-       "\t\t<dd>28</dd>\n",
+       "\t\t<dd>49</dd>\n",
        "</dl>\n"
       ],
       "text/latex": [
        "\\begin{description}\n",
-       "\\item[\\$avg\\_score] 0.304563492063492\n",
-       "\\item[\\$naive\\_pct\\_imp] 116.57848324515\n",
-       "\\item[\\$mc\\_pct\\_imp] 23.8020653258485\n",
-       "\\item[\\$n\\_genes] 28\n",
+       "\\item[\\$avg\\_score] 0.3845\n",
+       "\\item[\\$naive\\_pct\\_imp] 173.422222222222\n",
+       "\\item[\\$mc\\_pct\\_imp] 56.2954699372348\n",
+       "\\item[\\$n\\_genes] 49\n",
        "\\end{description}\n"
       ],
       "text/markdown": [
        "$avg_score\n",
-       ":   0.304563492063492\n",
+       ":   0.3845\n",
        "$naive_pct_imp\n",
-       ":   116.57848324515\n",
+       ":   173.422222222222\n",
        "$mc_pct_imp\n",
-       ":   23.8020653258485\n",
+       ":   56.2954699372348\n",
        "$n_genes\n",
-       ":   28\n",
+       ":   49\n",
        "\n",
        "\n"
       ],
       "text/plain": [
        "$avg_score\n",
-       "[1] 0.3045635\n",
+       "[1] 0.3845\n",
        "\n",
        "$naive_pct_imp\n",
-       "[1] 116.5785\n",
+       "[1] 173.4222\n",
        "\n",
        "$mc_pct_imp\n",
-       "[1] 23.80207\n",
+       "[1] 56.29547\n",
        "\n",
        "$n_genes\n",
-       "[1] 28\n"
+       "[1] 49\n"
       ]
      },
      "metadata": {},
@@ -650,7 +650,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "spare-intervention",
+   "id": "complimentary-great",
    "metadata": {},
    "source": [
     "## How do uni/multivariate analyses overlap?"
@@ -658,23 +658,23 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 22,
-   "id": "threatened-thriller",
+   "execution_count": 13,
+   "id": "planned-paris",
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/html": [
-       "0"
+       "2"
       ],
       "text/latex": [
-       "0"
+       "2"
       ],
       "text/markdown": [
-       "0"
+       "2"
       ],
       "text/plain": [
-       "[1] 0"
+       "[1] 2"
       ]
      },
      "metadata": {},
@@ -683,16 +683,16 @@
     {
      "data": {
       "text/html": [
-       "3"
+       "1"
       ],
       "text/latex": [
-       "3"
+       "1"
       ],
       "text/markdown": [
-       "3"
+       "1"
       ],
       "text/plain": [
-       "[1] 3"
+       "[1] 1"
       ]
      },
      "metadata": {},
@@ -725,7 +725,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "described-capitol",
+   "id": "critical-yesterday",
    "metadata": {},
    "source": [
     "# WGCNA"
@@ -734,7 +734,7 @@
   {
    "cell_type": "code",
    "execution_count": 14,
-   "id": "maritime-elephant",
+   "id": "played-measure",
    "metadata": {},
    "outputs": [
     {
@@ -755,7 +755,7 @@
   {
    "cell_type": "code",
    "execution_count": 15,
-   "id": "czech-length",
+   "id": "adaptive-brook",
    "metadata": {},
    "outputs": [
     {
@@ -801,7 +801,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "adequate-librarian",
+   "id": "historic-exposure",
    "metadata": {},
    "source": [
     "## TOM meta"
@@ -810,7 +810,7 @@
   {
    "cell_type": "code",
    "execution_count": 16,
-   "id": "corrected-dubai",
+   "id": "thorough-bride",
    "metadata": {},
    "outputs": [
     {
@@ -860,7 +860,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "proper-privacy",
+   "id": "numerous-intelligence",
    "metadata": {},
    "source": [
     "# Create Lists"
@@ -869,7 +869,7 @@
   {
    "cell_type": "code",
    "execution_count": 17,
-   "id": "formed-sword",
+   "id": "surrounded-prior",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -889,7 +889,7 @@
   {
    "cell_type": "code",
    "execution_count": 18,
-   "id": "finite-reader",
+   "id": "substantial-compact",
    "metadata": {},
    "outputs": [
     {
@@ -931,16 +931,16 @@
     {
      "data": {
       "text/html": [
-       "65"
+       "86"
       ],
       "text/latex": [
-       "65"
+       "86"
       ],
       "text/markdown": [
-       "65"
+       "86"
       ],
       "text/plain": [
-       "[1] 65"
+       "[1] 86"
       ]
      },
      "metadata": {},
@@ -967,16 +967,16 @@
     {
      "data": {
       "text/html": [
-       "37"
+       "50"
       ],
       "text/latex": [
-       "37"
+       "50"
       ],
       "text/markdown": [
-       "37"
+       "50"
       ],
       "text/plain": [
-       "[1] 37"
+       "[1] 50"
       ]
      },
      "metadata": {},
@@ -1003,16 +1003,16 @@
     {
      "data": {
       "text/html": [
-       "9"
+       "11"
       ],
       "text/latex": [
-       "9"
+       "11"
       ],
       "text/markdown": [
-       "9"
+       "11"
       ],
       "text/plain": [
-       "[1] 9"
+       "[1] 11"
       ]
      },
      "metadata": {},
@@ -1031,7 +1031,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "sublime-allergy",
+   "id": "continuous-stage",
    "metadata": {},
    "source": [
     "# Save lists"
@@ -1040,7 +1040,7 @@
   {
    "cell_type": "code",
    "execution_count": 19,
-   "id": "biblical-singapore",
+   "id": "governmental-insurance",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1058,7 +1058,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "institutional-mitchell",
+   "id": "conservative-tobago",
    "metadata": {},
    "outputs": [],
    "source": []
